# AppStruct

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
.zed/: tasks.json
include/: Document.h  Meta.hpp  RTTI.hpp  Serializer.h  Test.h  Transaction.h  TransactionObject.h
src/: Document.cpp  Serializer.cpp  Test.cpp  TransactionObject.cpp  main.cpp
